<resources>
    <string name="app_name">Block VS Dots</string>


    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="quit_msg">Quit the Game ?</string>
    <string name="play">Play</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="insane">Insane</string>
    <string name="best_score">Best Score</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit</string>
    <string name="game_over">Game Over</string>
    <string name="score">Score</string>
</resources>
