<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_home_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="100dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="vertical"

        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/block1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="VS"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:src="@drawable/dots"/>
    </LinearLayout>

    <Button
        android:id="@+id/play"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"/>

    <Button
        android:id="@+id/easy"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/easy"/>

    <Button
        android:id="@+id/normal"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/normal"/>

    <Button
        android:id="@+id/hard"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hard"/>

    <Button
        android:id="@+id/insane"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insane"/>

    <Button
        android:id="@+id/best_score"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/best_score"/>

    <Button
        android:id="@+id/settings"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"/>

    <Button
        android:id="@+id/quit"
        style="@style/HomeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit"/>

</LinearLayout>
